# .files

./: .gitignore  .gitmodules  README.md  `
framework/lib/: setup
framework/lib/shells/bash/: bash_login  bashrc
framework/lib/shells/zsh/: zlogin  zshenv  zshrc
framework/libexec/: dot::os::name
libexec/: install
plugins/alacritty/: alacritty.yml
plugins/alacritty/etc/: alacritty.yml
plugins/alacritty/setup/: setup
plugins/autojump/lib/interactive/: init.fish
plugins/autojump/lib/login/: init.fish
plugins/autojump/setup/: setup
plugins/bat/: dependencies
plugins/bat/env/: init
plugins/bat/lib/: alias.fish
plugins/bat/lib/login/: bat.conf
plugins/bat/setup/: setup
plugins/cmake/: dependencies
plugins/cmake/etc/: CMakeLists.txt
plugins/cmake/setup/: setup
plugins/ctags/setup/: setup
plugins/curl/: dependencies
plugins/delta/: dependencies
plugins/delta/etc/: .gitconfig
plugins/delta/setup/: setup
plugins/fish/env/: env
plugins/fish/env/setup/: install
plugins/fish/etc/: config.fish  gruv.sh  kitty-gruvbox-256color-dark.conf  temp.fish  theme_gruvbox.fish
plugins/fish/setup/: setup
plugins/fish/undodir/: %Users%eddyekofo%.files%plugins%fish%lib%login%init.fish
plugins/fzf/: dependencies
plugins/git/: dependencies
plugins/git/etc/: .gitconfig  gitconfig  tigrc
plugins/git/setup/: setup
plugins/github/setup/: setup
plugins/go/env/: env
plugins/homebrew/etc/: Brewfile
plugins/homebrew/setup/: setup
plugins/java/env/: env
plugins/java/interactive/: init.fish
plugins/java/login/: init.fish
plugins/java/setup/: setup
plugins/kitty/etc/: kitty.conf
plugins/kitty/setup/: setup
plugins/lazydocker/setup/: setup
plugins/lazygit/setup/: setup
plugins/llvm/env/: env
plugins/llvm/setup/: setup
plugins/ls/env/: env
plugins/ls/etc/: dircolors
plugins/ls/setup/: setup
plugins/lua/setup/: setup
plugins/misc/setup/: setup
plugins/neovim/env/: init
plugins/neovim/setup/: setup
plugins/ninja/setup/: setup
plugins/nnn/setup/: setup
plugins/python/env/: env
plugins/python/setup/: setup
plugins/ranger/: dependencies
plugins/ranger/setup/: setup
plugins/rg/setup/: setup
plugins/ripgrep/setup/: setup
plugins/rust/env/: env
plugins/sqlite/setup/: setup
plugins/terminal/: .gitignore  base_directories
plugins/terminal/env/: env
plugins/vim/env/: env
plugins/vim/etc/: .vimrc
plugins/vim/setup/: setup
plugins/vivid/setup/: setup
plugins/wezterm/etc/: wezterm.lua  wezterm_keys.txt
plugins/wezterm/setup/: setup
plugins/wget/setup/: setup
plugins/xdg/setup/: ensure-directories
plugins/zoxide/setup/: setup
(+42 files in other folders)
